src/index.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Shrikhand&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;


* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  width: 100%;
  scroll-behavior: smooth;
}


.ul-navbar li {
  list-style: none;
  margin: 18px;
  font-size: 1.1rem;
}

.ul-navbar li a {
  text-decoration: none;
  font-weight: 600;
}

/* .fastlinks a {
  padding: 5px;
  font-size: 1.2rem;
} */

.fa-star,
.fa-star-half-stroke {
  color: rgba(255, 255, 0, 0.993);
}

.hide {
  display: none;
}

.show {
  display: flex;
}

.lattePremiumMemberAround {
  justify-items: space-around;
}

.lattePremiumMemberStart {
  justify-items: flex-start;
}

.orderButtonAnimation {
  animation-name: orderButtonAnimation;
  animation-timing-function: ease-in-out;
  animation-iteration-count: infinite;
  animation-duration: 2s;
}

@keyframes orderButtonAnimation {
  0% {transform: scale(1);}

  50% {transform: scale(1.05);}

  100% {transform: scale(1);}
}

